<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Yapster</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_yap">Yap</string>
        <string name="title">Title</string>
    <string name="test_stream_string">Stream Screen</string>
    <string name="test_explore_string">Explore Screen</string>
    <string name="test_notification_string">Notification Screen</string>
    <string name="test_profile_string">Profile Screen</string>
    <string name="menu_stream">Stream</string>
    <string name="menu_notifications">Notifications</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="testFirstAndLastName">First Last</string>
    <string name="testUsername">\u0040username</string>
    <string name="typeface_sans">sans</string>
    <string name="testTitle">This Is Where The Title Should Go</string>
    <string name="testDateCreated">09/05/14</string>
    <string name="testLengthOfYap">00:40</string>
    <string name="testNumberOfListens">3141</string>
    <string name="testNumberOfReyaps">242</string>
    <string name="testNumberOfLikes">112</string>
    <string name="yapster">yapster</string>
    <string name="sign_in_sign_up_screen_email_username">Email/Username</string>
    <string name="sign_in_sign_up_screen_password">Password</string>
    <string name="sign_in_sign_up_screen_sign_in">Sign In</string>
    <string name="sign_in_sign_up_screen_sign_up">Sign Up</string>
    <string name="sign_in_sign_up_screen_forgot_password">Forgot your password?</string>
    <string name="sign_in_sign_up_screen_yapster_footer">\u0040 2014 Yapster</string>
    <string name="sign_in_sign_up_screen_error_title">Error</string>
    <string name="sign_in_sign_up_screen_popup_ok">OK</string>
    <string name="AWS_ACCOUNT_ID">100149822649</string>
    <string name="COGNITO_IDENTITY_POOL">us#8211;east#8211;1:61f3e72e#8211;ce4b#8211;4808#8211;88fb#8211;e51a9865c4ec</string>
    <string name="UNAUTHENTICATED_ROLE">YOUR UNAUTHENTICATED ARN HERE</string>
    <string name="AUTHENTICATED_ROLE">arn:aws:iam::100149822649:role/Cognito_YapsterAuth_DefaultRole</string>
    <string name="Regions.US_EAST_1">Regions.US_EAST_1</string>
    <string name="AWS_YAPSTERAPP_BUCKET_NAME">yapster_api</string>
    <string name="sign_up_page_1_screen_what_to_do_title">Enter Your Information</string>
    <string name="sign_up_page_1_screen_why_string">Inputting your info makes it easier for Yapster to provide you a better experience.</string>
    <string name="sign_up_page_1_screen_hint_email">Email*</string>
    <string name="sign_up_page_1_screen_hint_first_name">First Name*</string>
    <string name="sign_up_page_1_screen_hint_last_name">Last Name*</string>
    <string name="sign_up_page_1_screen_hint_username">Username*</string>
    <string name="sign_up_page_1_screen_radio_gender_male">Male</string>
    <string name="sign_up_page_1_screen_radio_gender_female">Female</string>
    <string name="sign_up_page_1_screen_radio_gender_other">Other</string>
    <string name="sign_up_page_1_screen_check_box_terms_privacy">I\'ve read Yapster\'s Terms of Service and Privacy Policy, and am at least 13 years old.</string>
    <string name="sign_up_page_1_screen_check_box_terms_privacy_and_age_13_part_1">I\'ve read Yapster\'s</string>
   	<string name="sign_up_page_1_screen_check_box_terms_privacy_and_age_13_part_2">and</string>
   	<string name="sign_up_page_1_screen_check_box_terms_privacy_and_age_13_part_3"> and am at least 13 years old.</string>
    <string name="sign_up_page_1_screen_button_continue">CONTINUE</string>
    <string name="sign_up_page_1_screen_button_sign_in">SIGN IN</string>
    <string name="sign_up_page_1_screen_button_terms_of_service">Terms Of Service</string>
    <string name="sign_up_page_1_screen_button_privacy_policy_1">Privacy</string>
    <string name="sign_up_page_1_screen_button_privacy_policy_2">Policy</string>
    <string name="sign_up_page_2_screen_what_to_do_title">Complete The Sign Up!</string>
    <string name="sign_up_page_2_screen_why_string">Input the username and password you would like for your Yapster account</string>
    <string name="sign_up_page_2_screen_username">Username*</string>
    <string name="sign_up_page_2_screen_username_details">Lower case letters and numbers only</string>
    <string name="sign_up_page_2_screen_password">Password*</string>
    <string name="sign_up_page_2_screen_password_details">Must have a lowercase, an uppercase letter, \u0026 a number</string>
    <string name="sign_up_page_2_screen_retype_password">Retype Password*</string>
    <string name="sign_up_page_2_screen_retype_password_details">Please retype your password from above</string>
    <string name="sign_up_page_2_screen_button_complete">COMPLETE!</string>
    <string name="sign_up_page_2_screen_button_sign_in">SIGN IN</string>
    <string name="fragment_notifications_test_username">\u0040username</string>
    <string name="fragment_notifications_test_rest_of_notification_text"> started followed you</string>
    <string name="drawer_open">Open Navigation Drawer</string>
    <string name="drawer_close">Close Navigation Drawer</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_report_bug">Report A Bug</string>
    <string name="action_help">Need Help?</string>
    <string name="action_edit">Edit Profile</string>
    <string name="facebook_app_id">804473029570067</string>

</resources>
