<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        android:icon="@drawable/ic_search_yapster_green"
        app:showAsAction="always"
        android:title="@string/action_search"/>

    <item
        android:id="@+id/action_report_bug"
        android:icon="@drawable/ic_search_yapster_green"
        android:showAsAction="never"
        android:title="@string/action_report_bug"/>

    <item
        android:id="@+id/action_help"
        android:icon="@drawable/ic_search_yapster_green"
        android:showAsAction="never"
        android:title="@string/action_help"/>

</menu>