<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_gravity="center_horizontal"
        android:background="@android:color/white"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textTitleWhatShouldTheUserDo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:text="@string/sign_up_page_2_screen_what_to_do_title"
            android:textColor="@color/yapster_green"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textTitleWhyShouldTheUserDo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/sign_up_page_2_screen_why_string"
            android:textColor="@android:color/black"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/editTextInputtedPassword1"
                android:layout_width="fill_parent"
                android:layout_height="30dp"
                android:background="@drawable/layer_list_sign_up_page_1_edit_text_bar_color"
                android:hint="@string/sign_up_page_2_screen_password"
                android:inputType="text"
                android:paddingLeft="10dp"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textColorHint="@color/yapster_light_grey"
                android:textSize="14sp" >
            </EditText>

            <TextView
                android:id="@+id/textViewInputtedPassword1Details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/sign_up_page_2_screen_password_details"
                android:textColor="@color/yapster_light_grey"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/editTextInputtedPassword2"
                android:layout_width="fill_parent"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/layer_list_sign_up_page_1_edit_text_bar_color"
                android:ems="10"
                android:hint="@string/sign_up_page_2_screen_retype_password"
                android:inputType="text"
                android:paddingLeft="10dp"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textColorHint="@color/yapster_light_grey"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textViewInputtedPassword2Details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/sign_up_page_2_screen_retype_password_details"
                android:textColor="@color/yapster_light_grey"
                android:textSize="12sp" />
        </LinearLayout>

        <Button
            android:id="@+id/buttonCompleteSignUp"
            android:layout_width="192dp"
            android:layout_height="38dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape_button_grey_outlined_transparent_background"
            android:text="@string/sign_up_page_2_screen_button_complete"
            android:textColor="@color/yapster_light_grey"
            android:textSize="12sp" />

        <Button
            android:id="@+id/buttonSignIn"
            android:layout_width="192dp"
            android:layout_height="34dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@android:color/transparent"
            android:text="@string/sign_up_page_2_screen_button_sign_in"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            android:textStyle="normal" />
    </LinearLayout>

</LinearLayout>