<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayoutForView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearLayoutForInputtedInfo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:background="@android:color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textTitleWhatShouldTheUserDo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:text="@string/sign_up_page_1_screen_what_to_do_title"
            android:textColor="@color/yapster_green"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textTitleWhyShouldTheUserDo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/sign_up_page_1_screen_why_string"
            android:textColor="@android:color/black"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/editTextInputtedEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/layer_list_sign_up_page_1_edit_text_bar_color"
            android:ems="10"
            android:hint="@string/sign_up_page_1_screen_hint_email"
            android:inputType="textEmailAddress"
            android:paddingLeft="10dp"
            android:textColor="@android:color/black"
            android:textColorHint="@color/yapster_light_grey"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/editTextInputtedFirstName"
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/layer_list_sign_up_page_1_edit_text_bar_color"
            android:hint="@string/sign_up_page_1_screen_hint_first_name"
            android:inputType="text"
            android:paddingLeft="10dp"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textColorHint="@color/yapster_light_grey"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/editTextInputtedLastName"
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/layer_list_sign_up_page_1_edit_text_bar_color"
            android:ems="10"
            android:hint="@string/sign_up_page_1_screen_hint_last_name"
            android:inputType="text"
            android:paddingLeft="10dp"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textColorHint="@color/yapster_light_grey"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/editTextInputtedUsername"
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/layer_list_sign_up_page_1_edit_text_bar_color"
            android:ems="10"
            android:hint="@string/sign_up_page_1_screen_hint_username"
            android:inputType="text"
            android:paddingLeft="10dp"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textColorHint="@color/yapster_light_grey"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textViewInputtedUsernameDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/sign_up_page_2_screen_username_details"
            android:textColor="@color/yapster_light_grey"
            android:textSize="12sp" />

        <RadioGroup
            android:id="@+id/radioGroupWithGenderChoices"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioOptionFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="false"
                android:text="@string/sign_up_page_1_screen_radio_gender_female"
                android:textColor="@color/yapster_light_grey"
                android:textSize="14sp" />

            <RadioButton
                android:id="@+id/radioOptionMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_weight="1"
                android:checked="false"
                android:text="@string/sign_up_page_1_screen_radio_gender_male"
                android:textColor="@color/yapster_light_grey"
                android:textSize="14sp" />

            <RadioButton
                android:id="@+id/radioOptionOther"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_weight="1"
                android:checked="false"
                android:text="@string/sign_up_page_1_screen_radio_gender_other"
                android:textColor="@color/yapster_light_grey"
                android:textSize="14sp" />
        </RadioGroup>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/checkBoxTermsOfServicePrivacyPolicyAge13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/sign_up_page_1_screen_check_box_terms_privacy"
                android:textColor="@color/yapster_light_grey"
                android:textSize="12sp" />

            <!--<TextView-->
                <!--android:id="@+id/textViewTermsOfServicePrivacyPolicyAge13Part1"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="17dp"-->
                <!--android:layout_alignBottom="@+id/checkBoxTermsOfServicePrivacyPolicyAge13"-->
                <!--android:layout_marginBottom="7dp"-->
                <!--android:layout_toRightOf="@+id/checkBoxTermsOfServicePrivacyPolicyAge13"-->
                <!--android:text="@string/sign_up_page_1_screen_check_box_terms_privacy"-->
                <!--android:textColor="@color/yapster_light_grey"-->
                <!--android:textSize="12sp" />-->

            <!--<Button-->
            <!--android:id="@+id/buttonPrivacyPolicy1"-->
            <!--android:layout_width="50dp"-->
            <!--android:layout_height="20dp"-->
            <!--android:layout_below="@+id/textViewTermsOfServicePrivacyPolicyAge13Part1"-->
            <!--android:layout_toRightOf="@+id/checkBoxTermsOfServicePrivacyPolicyAge13"-->
            <!--android:background="@android:color/transparent"-->
            <!--android:text="@string/sign_up_page_1_screen_button_privacy_policy_1"-->
            <!--android:textColor="@color/yapster_green"-->
            <!--android:textSize="12sp" />-->

        </RelativeLayout>

    </LinearLayout>

    <Button
        android:id="@+id/buttonContinueToSignUpPage2"
        android:layout_width="fill_parent"
        android:layout_height="38dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape_button_grey_outlined_transparent_background"
        android:text="@string/sign_up_page_1_screen_button_continue"
        android:textColor="@color/yapster_light_grey"
        android:textSize="14sp" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/loginButtonFacebook"
        android:layout_width="fill_parent"
        android:layout_height="38dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="20dp" />

</LinearLayout>